* removed `onDblClick` in item page * fixed item page overflow * fixed `details-grid` column sizes * added transition to popups * edit popup display values on fields

--- a/public/css/pages/item.css
+++ b/public/css/pages/item.css
@@ -1,12 +1,8 @@
-.main-section {
-    overflow: scroll;
-}
-
 #item-page-wrapper {
     display: flex;
     flex-direction: column;
     margin: 0 100px;
-    gap: 10px;
+    gap: 20px;
     width: 100%;
     height: 100%;
 }
@@ -127,7 +123,7 @@
 }
 
 #bottom-wrapper {
-    height: 370px;
+    height: 500px;
 }
 
 #details-grid {
